--- a/config/boards/shields/x10kb/x10kb.dtsi
+++ b/config/boards/shields/x10kb/x10kb.dtsi
@@ -67,13 +67,13 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
         status = "disabled";
     };
 
-    // left_encoder1: encoder_left1 {
-    //     compatible = "alps,ec11";
-    //     a-gpios = <&pro_micro 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-    //     b-gpios = <&pro_micro 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-    //     steps = <80>;
-    //     status = "disabled";
-    // };
+    left_encoder1: encoder_left1 {
+        compatible = "alps,ec11";
+        a-gpios = <&pro_micro 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&pro_micro 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        steps = <80>;
+        status = "disabled";
+    };
 
     // right_encoder0: encoder_right0 {
     //     compatible = "alps,ec11";
@@ -94,7 +94,7 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
     sensors: sensors {
         compatible = "zmk,keymap-sensors";
         // sensors = <&left_encoder0 &left_encoder1 &right_encoder0 &right_encoder1>;
-        sensors = <&left_encoder0>;
+        sensors = <&left_encoder0 &left_encoder1>;
         triggers-per-rotation = <20>;
     };
 };
