--- a/config/boards/shields/x10kb/x10kb.zmk.yml
+++ b/config/boards/shields/x10kb/x10kb.zmk.yml
@@ -2,7 +2,7 @@ file_format: "1"
 id: x10kb
 name: x10kb
 type: shield
-url: https://github.com/foostan/crkbd/
+url: https://github.com/gsecillano/zmk-x10kb/
 requires: [pro_micro]
 exposes: [i2c_oled]
 features:
