--- a/config/boards/shields/x10kb/x10kb_left.conf
+++ b/config/boards/shields/x10kb/x10kb_left.conf
@@ -4,3 +4,4 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_ZMK_USB_LOGGING=y
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
